# semantic_map

./: main.py
semantic_mapping/smt_control/smt_jackal_control/: CMakeLists.txt  package.xml
semantic_mapping/smt_control/smt_jackal_control/config/: control.yaml  robot_localization.yaml  teleop_ps4.yaml
semantic_mapping/smt_control/smt_jackal_control/launch/: control.launch  jackal_control.launch  teleop.launch
semantic_mapping/smt_description/: CMakeLists.txt  package.xml
semantic_mapping/smt_description/last_version/: VLP-16.urdf.xacro  jackal.gazebo  jackal.urdf.xacro
semantic_mapping/smt_description/launch/: description.launch
semantic_mapping/smt_description/meshes/: azure_kinect.stl
semantic_mapping/smt_description/urdf/: accessories.urdf.xacro  jackal.gazebo  jackal.urdf.xacro  roas.urdf.xacro
semantic_mapping/smt_description/urdf/accessories/: bridge_plate.urdf.xacro  camera_mount.urdf.xacro  hokuyo_ust10.urdf.xacro  novatel_smart6.urdf.xacro  sick_lms1xx_mount.urdf.xacro  (+2 more)
semantic_mapping/smt_gazebo/: CMakeLists.txt  package.xml
semantic_mapping/smt_gazebo/launch/: gazebo.launch
semantic_mapping/smt_run/: CMakeLists.txt  package.xml
semantic_mapping/smt_run/launch/: run.launch  test.launch
semantic_mapping/smt_run/msg/: FloatArray.msg
semantic_mapping/smt_run/src/: detect_obj.py  main.py  search_unknown_area.py  viewer.py
semantic_mapping/smt_viz/: CMakeLists.txt  package.xml
semantic_mapping/smt_viz/launch/: view_model.launch  view_robot.launch
semantic_mapping/smt_viz/rviz/: model.rviz  robot.rviz
topological_map/: ReadConceptNet.py  topology_tools.py
