<?xml version="1.0"?>
<package>
  <name>smt_viz</name>
  <version>1.0.0</version>
  <description>Visualization configuration for Tertlebot3 waffle pi</description>
  <maintainer email="hoyeon@todo.todo">hoyeon</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>husky_description</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>rviz_imu_plugin</run_depend>

  <export>
  </export>
</package>
